[gd_scene load_steps=9 format=3 uid="uid://c7pamyh56glp1"]

[ext_resource type="PackedScene" uid="uid://bvlov7wbeurky" path="res://NPC/animsfornpc1.tscn" id="1_3yt5e"]
[ext_resource type="Script" path="res://NPC/npc_1.gd" id="1_yfbne"]
[ext_resource type="AudioStream" uid="uid://f08rlpm5wbsj" path="res://SFX/landing.mp3" id="2_11o7g"]
[ext_resource type="PackedScene" uid="uid://c8giknctto3q0" path="res://Enemy/cone.tscn" id="2_ds6il"]
[ext_resource type="AudioStream" uid="uid://cc8j8vopxsurw" path="res://SFX/dead.mp3" id="3_fwy8c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iaepi"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_se6b1"]
points = PackedVector3Array(-0.000195742, 1, -0.000195742, 0.194988, -1, -0.980814, -0.000195742, -1, -1, -0.195184, -1, -0.980814, -0.382733, -1, -0.924041, -0.555599, -1, -0.831637, -0.707126, -1, -0.707126, -0.831637, -1, -0.555599, -0.924041, -1, -0.382733, -0.980814, -1, -0.195184, -1, -1, -0.000195742, -0.980814, -1, 0.194988, -0.924041, -1, 0.382537, -0.831637, -1, 0.555403, -0.707126, -1, 0.70693, -0.555599, -1, 0.831441, -0.382733, -1, 0.923845, -0.195184, -1, 0.980619, -0.000195742, -1, 1, 0.194988, -1, 0.980619, 0.382537, -1, 0.923845, 0.555403, -1, 0.831441, 0.70693, -1, 0.70693, 0.831441, -1, 0.555403, 0.923845, -1, 0.382537, 0.980619, -1, 0.194988, 1, -1, -0.000195742, 0.980619, -1, -0.195184, 0.923845, -1, -0.382733, 0.831441, -1, -0.555599, 0.70693, -1, -0.707126, 0.555403, -1, -0.831637, 0.382537, -1, -0.924041)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5k4xv"]

[node name="NPC" type="CharacterBody3D"]
script = ExtResource("1_yfbne")
audio_hit = ExtResource("2_11o7g")
audio_death = ExtResource("3_fwy8c")

[node name="animsfornpc" parent="." instance=ExtResource("1_3yt5e")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.915666, 0)

[node name="Skeleton3D" parent="animsfornpc/Armature" index="0"]
bones/0/position = Vector3(-0.103298, 0.676203, -107.224)
bones/0/rotation = Quaternion(-0.486167, 0.0664464, -0.016655, 0.871177)
bones/1/position = Vector3(-8.04663e-07, 9.49147, -0.465551)
bones/1/rotation = Quaternion(0.098296, 0.0208226, 0.0277616, 0.994552)
bones/2/position = Vector3(-5.96046e-07, 11.0867, 1.28895e-05)
bones/2/rotation = Quaternion(0.0907569, 0.01333, 0.0177519, 0.995626)
bones/3/position = Vector3(1.41561e-06, 12.6705, -1.2219e-05)
bones/3/rotation = Quaternion(0.0908725, 0.0122582, 0.0178845, 0.995627)
bones/4/rotation = Quaternion(-0.0898824, -0.0109651, -0.00309804, 0.995887)
bones/5/rotation = Quaternion(-0.305421, -0.0571272, -0.0510072, 0.949133)
bones/7/position = Vector3(12.6184, 10.7107, -0.183386)
bones/7/rotation = Quaternion(-0.60897, -0.386892, 0.553758, -0.41572)
bones/8/position = Vector3(2.08656e-05, 26.2031, 9.25333e-07)
bones/8/rotation = Quaternion(0.420117, -0.144612, -0.0830359, 0.892017)
bones/9/position = Vector3(-2.61998e-07, 14.6067, 1.12087e-05)
bones/9/rotation = Quaternion(0.0177075, 0.000123043, 0.341545, 0.939699)
bones/10/position = Vector3(-3.09944e-06, 18.9079, -3.36766e-06)
bones/11/position = Vector3(-12.6184, 10.7098, -0.164308)
bones/11/rotation = Quaternion(0.637928, -0.361032, 0.52812, 0.428712)
bones/12/position = Vector3(-3.27036e-06, 26.2031, 3.5354e-06)
bones/12/rotation = Quaternion(0.365277, 0.181059, -0.173238, 0.896537)
bones/13/position = Vector3(-2.81154e-06, 14.608, 2.81424e-06)
bones/13/rotation = Quaternion(0.0313048, -0.000543332, -0.55949, 0.828245)
bones/14/position = Vector3(7.03335e-06, 18.9102, 6.82472e-06)
bones/15/position = Vector3(9.95693, -5.27536, 0.178729)
bones/15/rotation = Quaternion(0.0549735, 0.517721, 0.852191, -0.0520932)
bones/16/rotation = Quaternion(-0.548488, -0.075859, 0.0341277, 0.832011)
bones/17/rotation = Quaternion(0.544096, -0.0217379, -0.0032447, 0.838735)
bones/18/position = Vector3(-2.29742e-07, 19.8081, 3.98625e-07)
bones/18/rotation = Quaternion(0.405405, -0.033901, 0.00866379, 0.913467)
bones/19/position = Vector3(-7.59959e-07, 7.85699, -2.08616e-07)
bones/20/position = Vector3(-9.95693, -5.27537, -0.0830115)
bones/20/rotation = Quaternion(-0.105381, 0.46593, 0.878407, -0.0143472)
bones/21/position = Vector3(-8.87683e-07, 52.1585, 1.20697e-07)
bones/21/rotation = Quaternion(-0.438283, -0.0627057, -0.0109782, 0.89658)
bones/22/rotation = Quaternion(0.649014, 0.143734, -0.0852145, 0.742199)
bones/23/position = Vector3(6.98029e-07, 20.1559, -3.39384e-08)
bones/23/rotation = Quaternion(0.307085, 0.0338794, -0.0109396, 0.951016)

[node name="Physical Bone mixamorig_Hips" parent="animsfornpc/Armature/Skeleton3D" index="2"]
transform = Transform3D(99.0615, 13.0066, 4.20117, -9.36274, 86.9652, -48.4705, -9.95791, 47.6223, 87.3668, -0.302929, 2.97916, -111.375)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2046e-07, 5.18048e-07, 0.0475134)
body_offset = Transform3D(100, 4.3869e-05, 2.38419e-06, 4.76837e-07, 4.89911, -99.8799, -4.29153e-05, 99.8799, 4.89911, -1.21593e-05, 4.74563, -0.232825)

[node name="Physical Bone mixamorig_Spine" parent="animsfornpc/Armature/Skeleton3D" index="3"]
transform = Transform3D(98.1372, 18.2656, 5.95394, -9.25402, 72.1036, -68.669, -16.8358, 66.8389, 72.4508, -0.832543, 9.08872, -119.542)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.66976e-07, 1.85427e-07, 0.0554315)
body_offset = Transform3D(100, -2.3365e-05, 4.29153e-05, 4.19617e-05, -1.14441e-05, -100, 2.19345e-05, 100, -7.62939e-06, 2.43187e-05, 5.54316, -1.81198e-05)

[node name="Physical Bone mixamorig_Spine1" parent="animsfornpc/Armature/Skeleton3D" index="4"]
transform = Transform3D(97.3897, 21.9525, 5.77405, -8.33299, 58.2375, -80.8638, -21.1143, 78.2719, 58.5466, -1.52842, 18.0178, -127.267)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.31441e-07, -2.55979e-07, 0.0633458)
body_offset = Transform3D(100, 1.28746e-05, 1.14441e-05, 1.09673e-05, 9.53674e-05, -100, -1.04904e-05, 100, 0.000102997, -4.3869e-05, 6.33458, 1.90735e-05)

[node name="Physical Bone mixamorig_Spine2" parent="animsfornpc/Armature/Skeleton3D" index="5"]
transform = Transform3D(96.6151, 25.3194, 4.94433, -6.4975, 42.4307, -90.3184, -24.966, 86.94, 42.6396, -2.24648, 29.5774, -134.015)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.95196e-07, -2.72288e-08, 0.0712605)
body_offset = Transform3D(100, 2.16961e-05, -2.14577e-05, -2.43187e-05, 3.8147e-06, -100, -2.45571e-05, 100, 1.14441e-05, 7.10487e-05, 7.12605, 1.90735e-06)

[node name="Physical Bone mixamorig_Neck" parent="animsfornpc/Armature/Skeleton3D" index="6"]
transform = Transform3D(-97.1779, -23.5086, 1.95162, 5.92474, -32.3317, -94.4434, 22.8333, -91.6625, 32.812, -2.70786, 41.2833, -138.885)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.48034e-07, 1.17719e-06, 0.0557766)
body_offset = Transform3D(-100, -2.19345e-05, 2.57492e-05, -2.86102e-05, 28.6669, -95.803, 1.54972e-05, -95.803, -28.6669, -3.62396e-05, 5.34353, 1.59905)

[node name="Physical Bone mixamorig_Head" parent="animsfornpc/Armature/Skeleton3D" index="7"]
transform = Transform3D(-99.637, -6.89165, 4.99685, 2.78104, -81.8321, -57.4088, 8.04544, -57.0615, 81.7267, -3.45977, 53.9398, -151.233)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.47825e-08, -7.26432e-07, 0.128691)
body_offset = Transform3D(-100, -1.50204e-05, 3.45707e-06, -4.52995e-06, 28.667, -95.8029, 1.26362e-05, -95.8029, -28.667, 7.03335e-06, 12.329, 3.68912)

[node name="Physical Bone mixamorig_LeftShoulder" parent="animsfornpc/Armature/Skeleton3D" index="8"]
transform = Transform3D(-16.8367, 93.7351, -30.5, -41.8586, -34.8122, -83.8807, -89.2434, -1.35586, 45.0975, 14.046, 31.1814, -140.001)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00603785, -0.0432577, 0.0121925)
body_offset = Transform3D(100, -2.19345e-05, -1.14441e-05, 1.62125e-05, 100, 8.7738e-05, 0, -9.53674e-05, 100, 0.603785, 4.32577, -1.21925)

[node name="Physical Bone mixamorig_LeftArm" parent="animsfornpc/Armature/Skeleton3D" index="9"]
transform = Transform3D(-46.9166, 35.3135, -80.9431, -45.9319, -88.0416, -11.7872, -75.4261, 31.6486, 57.5263, 34.5167, 17.4985, -136.783)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00493582, -0.055139, -0.0183026)
body_offset = Transform3D(100, -3.05176e-05, -5.00679e-05, 1.14441e-05, 100, -3.8147e-05, 4.95911e-05, 3.62396e-05, 100, 0.49358, 5.5139, 1.83026)

[node name="Physical Bone mixamorig_LeftForeArm" parent="animsfornpc/Armature/Skeleton3D" index="10"]
transform = Transform3D(-14.2632, -82.643, -54.4674, -91.8697, -9.42343, 38.3557, -36.8309, 55.5098, -74.5798, 44.5902, 6.30928, -127.535)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.07196e-06, -8.36078e-07, 0.0945434)
body_offset = Transform3D(100, -3.43323e-05, -3.43323e-05, -4.19617e-05, -3.8147e-06, -100, 4.3869e-05, 100, -3.33786e-06, -0.000103951, 9.45434, 8.39233e-05)

[node name="Physical Bone mixamorig_RightShoulder" parent="animsfornpc/Armature/Skeleton3D" index="11"]
transform = Transform3D(42.4715, 37.8931, 82.221, 39.8409, -89.3751, 20.6103, 81.295, 24.0041, -53.0559, -25.429, 30.8642, -125.585)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.59885e-08, 1.0468e-06, 0.131017)
body_offset = Transform3D(100, 7.24792e-05, -3.14713e-05, -2.19345e-05, -3.8147e-05, -100, -6.48499e-05, 100, -4.19617e-05, 5.72205e-06, 13.1017, -9.91821e-05)

[node name="Physical Bone mixamorig_RightArm" parent="animsfornpc/Armature/Skeleton3D" index="12"]
transform = Transform3D(34.7043, -14.0925, 92.7201, 78.8405, -49.1588, -36.981, 50.7917, 85.9349, -5.94966, -36.2872, 25.1607, -114.678)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00388329, -0.048879, -0.00795398)
body_offset = Transform3D(100, 4.19617e-05, -1.14441e-05, -3.05176e-05, 100, 8.01086e-05, 1.71661e-05, -7.24792e-05, 100, -0.388327, 4.8879, 0.795395)

[node name="Physical Bone mixamorig_RightForeArm" parent="animsfornpc/Armature/Skeleton3D" index="13"]
transform = Transform3D(22.8742, 92.0136, -31.7849, 76.3054, -37.2219, -52.8396, -60.4505, -12.1669, -78.7255, -34.5855, 25.9553, -98.3453)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000410984, -0.00588799, 0.0988482)
body_offset = Transform3D(100, -0.000108719, -9.15527e-05, -0.000102997, -3.62396e-05, -100, 0.000106812, 100, -3.62396e-05, -0.04109, 9.88483, 0.588802)

[node name="Physical Bone mixamorig_LeftUpLeg" parent="animsfornpc/Armature/Skeleton3D" index="14"]
transform = Transform3D(-95.8634, 6.82017, -27.635, 20.05, 85.0927, -48.5513, 20.2041, -52.0838, -82.9402, 17.1785, 9.77811, -82.0119)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.56589e-07, 2.31036e-06, 0.260796)
body_offset = Transform3D(100, -9.53674e-06, -1.71661e-05, -2.19345e-05, -1.90735e-05, -100, 9.53674e-06, 100, -2.28882e-05, 0.000100136, 26.0796, -0.000225067)

[node name="Physical Bone mixamorig_LeftLeg" parent="animsfornpc/Armature/Skeleton3D" index="15"]
transform = Transform3D(-90.0622, 43.4072, -2.14989, 34.1257, 73.6946, 58.3485, 26.9118, 51.8163, -81.1839, 24.8999, 8.4753, -40.9528)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.18712e-06, -1.1793e-06, 0.239329)
body_offset = Transform3D(100, 1.90735e-06, 1.90735e-06, -1.90735e-06, 2.67029e-05, -100, 0, 100, 3.05176e-05, 0.000118256, 23.9329, 0.000110626)

[node name="Physical Bone mixamorig_LeftFoot" parent="animsfornpc/Armature/Skeleton3D" index="16"]
transform = Transform3D(-88.6081, 19.3058, -42.1413, 38.2176, 81.8736, -42.85, 26.2301, -54.074, -79.9249, 29.5875, -1.24496, -13.6076)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.38287e-06, -7.09314e-07, 0.0990396)
body_offset = Transform3D(100, 7.62939e-06, 4.95911e-05, 4.3869e-05, 3.8147e-06, -100, -3.8147e-06, 100, 2.28882e-05, 0.000733376, 9.90395, 6.86646e-05)

[node name="Physical Bone mixamorig_LeftToeBase" parent="animsfornpc/Armature/Skeleton3D" index="17"]
transform = Transform3D(-87.551, -13.4556, -46.4087, 43.2707, 20.9125, -87.6944, 21.5051, -96.8587, -12.4868, 35.5846, 6.44368, -5.20106)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.59561e-06, 2.27308e-06, 0.0392834)
body_offset = Transform3D(100, -3.8147e-06, 0.000389099, 0.000370026, 6.10352e-05, -100, 1.52588e-05, 100, 4.00543e-05, 0.000344276, 3.92834, -0.000228882)

[node name="Physical Bone mixamorig_RightUpLeg" parent="animsfornpc/Armature/Skeleton3D" index="18"]
transform = Transform3D(-98.6481, -15.3927, -5.62344, -11.861, 90.7422, -40.3135, 11.3082, -39.1015, -91.3411, -8.32334, 9.27323, -77.9738)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.47147e-07, -1.09054e-10, 0.260796)
body_offset = Transform3D(100, 1.62125e-05, 4.81606e-05, 5.29289e-05, 0.000114441, -100, -1.04904e-05, 100, 0.000133514, -9.72748e-05, 26.0796, -3.48091e-05)

[node name="Physical Bone mixamorig_RightLeg" parent="animsfornpc/Armature/Skeleton3D" index="19"]
transform = Transform3D(-99.529, 5.21203, -8.17346, 0.733797, 88.1248, 47.2597, 9.66604, 46.9771, -87.748, -4.90072, 8.47638, -33.1532)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.28335e-06, -4.46654e-08, 0.23932)
body_offset = Transform3D(100, -9.71556e-06, -1.82092e-05, -1.89543e-05, -4.57764e-05, -100, 1.00136e-05, 100, -6.10352e-05, -0.000123978, 23.9321, 1.90735e-05)

[node name="Physical Bone mixamorig_RightFoot" parent="animsfornpc/Armature/Skeleton3D" index="20"]
transform = Transform3D(-95.1686, -17.6951, 25.0962, -30.6963, 57.0068, -76.21, -0.821125, -80.2316, -59.6844, -5.47402, 4.84697, -6.13864)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.04937e-07, -4.17263e-07, 0.100782)
body_offset = Transform3D(100, 9.53674e-06, -3.05176e-05, -9.53674e-06, 0.000160217, -100, -3.8147e-06, 100, 0.00018692, -2.74181e-05, 10.0782, 2.28882e-05)

[node name="Physical Bone mixamorig_RightToeBase" parent="animsfornpc/Armature/Skeleton3D" index="21"]
transform = Transform3D(-93.6682, -14.8705, 31.7038, -34.6749, 26.7439, -89.9023, 4.89013, -95.2031, -30.2069, -8.61306, 13.6476, -1.88108)
joint_offset = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000968241, -0.0206332, 0.00669869)
body_offset = Transform3D(100, -4.76837e-06, -2.28882e-05, -3.8147e-06, 28.7348, -95.7826, 6.03497e-07, 95.7827, 28.7348, 0.0968242, 1.23451, 1.78381)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_iaepi")

[node name="VisionArea" type="Area3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -0.944089)

[node name="cone" parent="VisionArea" instance=ExtResource("2_ds6il")]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, -6.49206)
visible = false

[node name="VisionConeCollision" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(5, 0, 0, 0, -2.18557e-07, -5, 0, 5, -2.18557e-07, 0, 0, -6.49206)
shape = SubResource("ConvexPolygonShape3D_se6b1")

[node name="VisionTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="VisionRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0)
target_position = Vector3(0, 0, -100)
debug_shape_custom_color = Color(1, 1, 0, 1)

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="deathtimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DamageArea" type="Area3D" parent="."]
collision_layer = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.307936)
shape = SubResource("CapsuleShape3D_5k4xv")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[connection signal="timeout" from="VisionTimer" to="." method="_on_vision_timer_timeout"]
[connection signal="timeout" from="AggroTimer" to="." method="_on_aggro_timer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="deathtimer" to="." method="_on_deathtimer_timeout"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]

[editable path="animsfornpc"]
